Move services into pkg, pb for sidecar